refactor(credentials)!: harden credential conversion and proxy resolution
- replace converter capability checks with a type-safe interface whose implementations declare their supported Bitwarden item type
- use ExtensionList lookups and bind proxies to their converter and concrete credential classes for reliable deferred resolution
- restrict proxy construction to its factory and simplify synchronized lazy resolution, method delegation, and exception propagation
- align proxy equality, hashing, descriptors, descriptions, and default method handling with Jenkins credential implementations
- enforce global credential scope within converters instead of passing it through the conversion API
- consolidate item metadata through inheritance and make model data immutable with records, final classes, and final fields
- remove obsolete metadata serialization after cache persistence removal
- add SpotBugs nullability contracts and replace the LGTM suppression comment with a Java SuppressWarnings annotation

BREAKING CHANGE: CredentialConverter is now an interface; canConvert was removed, createProxy and convert no longer accept CredentialsScope, and implementations must declare their supported Bitwarden item type.